--- a/src/components/Friends/Friends.module.css
+++ b/src/components/Friends/Friends.module.css
@@ -1,3 +1,4 @@
+
 .friendList{
    margin-top: 80px;
    margin-bottom: 80px;
@@ -5,6 +6,7 @@
    display: flex;
    flex-direction: column;
 }
+
 .item{
    display: flex;
    justify-content: flex-start;
@@ -16,16 +18,14 @@
    border-radius: 8px;
    padding: 10px
 };
-.status{
-   height: 15px;
-      width: 15px;
-   
-      border-radius: 50%;
-   
-      padding: 3px;
-      margin-left: 15px;
-};
 
 .name{
    background-color: #fff; 
+}
+.status {
+   width: 15px;
+   height: 15px;
+   border-radius: 50%;
+   padding: 3px;
+   margin-right: 15px;
 }
